@@ -12,10 +12,12 @@ public interface RuleChainVisitor {
     /**
      * Add the given rule to the visitor.
      * 
+     * @param ruleSet
+     *            The RuleSet to which the rule belongs.
      * @param rule
      *            The rule to add.
      */
-    void add(Rule rule);
+    void add(RuleSet ruleSet, Rule rule);
 
     /**
      * Visit all the given ASTCompilationUnits provided using the given
