@@ -1,6 +1,7 @@
 ???? - 4.2.3:
 
 Fixes for exclude-pattern
+Updates to RuleChain to honor RuleSet exclude-pattern
 
 May 20, 2008 - 4.2.2:
 
